# nine-mens-morris

./: README.md  pyproject.toml
dummy/: Assignment-04_a4_back_to_mnist.py  Assignment-10_code.py  Assignment-17_Submission-Code.py
nmm/: __init__.py  agent.py  boards.py  cells.py  cmd_game.py  dtypes.py  engine.py  mills.py  pieces.py  players.py
nmm/ui/: __main__.py  boards.py  game.py  old.py  players.py  uiconfig.py
tests/nmm/: test_board.py  test_boards.py  test_cells.py  test_engine.py  test_mills.py  test_pieces.py  test_players.py
