[tool.poetry]
name = "nmm"
version = "0.1.0"
description = "Nine Men's Morris Game (AI381 course project)"
authors = ["Karim Said Barsim <k.barsim@upm.edu.sa>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
coverage = "^7.6.4"

[tool.pytest.ini_options]
addopts = "--cov=nmm --cov-report=term-missing --cov-report=html --cov-branch"
minversion = "6.0"

[tool.coverage.run]
branch = false
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
